# op-succinct

./: Cargo.toml
contracts/: foundry.toml
contracts/script/fp/: DeployOPSuccinctFDG.s.sol  UpgradeOPSuccinctFDG.s.sol
contracts/src/fp/: OPSuccinctFaultDisputeGame.sol
contracts/src/utils/: MockPermissionedDisputeGame.sol
contracts/src/validity/: OPSuccinctDisputeGame.sol
contracts/test/fp/: OPSuccinctFaultDisputeGame.t.sol
contracts/test/validity/: OPSuccinctDisputeGame.t.sol
elf/: aggregation-elf
fault-proof/: Cargo.toml
fault-proof/src/: backup.rs  challenger.rs  config.rs  contract.rs  eigenda_provider.rs  lib.rs  prometheus.rs  proposer.rs  prover.rs  range_optimizer.rs  rise.rs  witness_precacher.rs
fault-proof/tests/common/: process.rs
programs/range/eigenda/: Cargo.toml
programs/range/eigenda/src/: main.rs
rise-fault-proof/: Cargo.toml
rise-fault-proof/src/common/: args.rs  misc.rs  primitives.rs  state.rs
rise-fault-proof/src/components/: game_challenger.rs  game_creator.rs  game_fetcher.rs
rise-fault-proof/src/rpc/: cl.rs  el.rs  utils.rs
rise-fp/: Cargo.toml
rise-fp/src/: lib.rs
rise-fp/src/common/: args.rs  cl_rpc_utils.rs  contract.rs  el_rpc_utils.rs  primitives.rs  state.rs
rise-fp/src/components/: app_driver.rs  game_challenger.rs  game_creator.rs  game_fetcher.rs  tx_manager.rs
rise-fp/src/proof/: host.rs
rise-fp/src/rpc/: cl.rs  el.rs
scripts/prove/: Cargo.toml
scripts/utils/: Cargo.toml
utils/client/: Cargo.toml
utils/client/src/: client.rs  types.rs
utils/client/src/witness/: executor.rs  mod.rs  preimage_store.rs
utils/eigenda/host/: Cargo.toml
utils/eigenda/host/src/: host.rs  witness_generator.rs
utils/eigenda/host/tests/: host.rs  witness_generator.rs
utils/host/: Cargo.toml
utils/host/src/: fetcher.rs  host.rs  logger.rs
utils/host/src/witness_generation/: preimage_witness_collector.rs  traits.rs
utils/signer/: Cargo.toml
utils/signer/src/: lib.rs
validity/src/: proposer.rs
