[package]
name = "rise-fp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

# alloy
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rlp.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-signer-local.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-transport = { workspace = true, features = ["throttle"] }
alloy-transport-http = { workspace = true, features = [
    "reqwest",
    "reqwest-native-tls",
] }

# op-alloy
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true

# kona
kona-genesis.workspace = true
kona-host.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-providers-alloy.workspace = true
kona-registry.workspace = true

# hokulea
canoe-provider.workspace = true
canoe-sp1-cc-host.workspace = true
canoe-verifier-address-fetcher.workspace = true
hokulea-host-bin.workspace = true
hokulea-proof.workspace = true
hokulea-witgen.workspace = true

# op-succinct
op-succinct-client-utils.workspace = true
op-succinct-eigenda-host-utils.workspace = true
op-succinct-host-utils.workspace = true

anyhow.workspace = true
async-trait.workspace = true
ciborium.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
kona-protocol.workspace = true
rand = { workspace = true, features = ["alloc"] }
serde_json.workspace = true
serde.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
